--- a/client/main.css
+++ b/client/main.css
@@ -23,7 +23,7 @@ table.dataTable {
 }
 
 table.dataTable td, table.dataTable th {
-    border: 1px solid #dddddd;
+    border: 1px solid #ababab;
     text-align: left;
     padding: 8px;
 }
