--- a/public/components/mrp-button-set/mrp-excel-button/mrp-excel-button.html
+++ b/public/components/mrp-button-set/mrp-excel-button/mrp-excel-button.html
@@ -1,3 +1,9 @@
+<!--
+V0.1
+
+A button that is used to create a Excel file from a <table>.
+-->
+
 <script src="../../Libs/logger.js"></script>
 <script src="../../Libs/JSLIB.js"></script>
 <script src="../../Libs/Brokers.js"></script>
