--- a/public/components/mrp-check-box/mrp-check-box.html
+++ b/public/components/mrp-check-box/mrp-check-box.html
@@ -1,3 +1,9 @@
+<!--
+V0.1
+
+A nicer looking check box.
+-->
+
 <script src="../Libs/logger.js"></script>
 <script src="../Libs/JSLIB.js"></script>
 <script src="../Libs/Brokers.js"></script>
