--- a/public/components/mrp-drop-down/mrp-drop-down.html
+++ b/public/components/mrp-drop-down/mrp-drop-down.html
@@ -1,3 +1,9 @@
+<!--
+V0.1
+
+This is basically the select element that has a list attribute, which accepts a 1D array
+-->
+
 <script src="../Libs/logger.js"></script>
 <script src="../Libs/JSLIB.js"></script>
 <script src="../Libs/Brokers.js"></script>
@@ -10,12 +16,12 @@
 
     <template>
         <style include="mrp-drop-down-style"></style>
-        <select id="[[id]]" class$="[[class]]" on-click="handleClick">
+        <select id="[[id]]" class$="[[class]]" on-change="handleChange">
                 <template is="dom-repeat" items="[[list]]">
-                <template is="dom-if" if="[[isSelected(item)]]">< 
+                <template is="dom-if" if="[[isSelected(item, index)]]">< 
                     <option value="[[item]]" selected>[[item]]</option>
                 </template>
-                <template is="dom-if" if="[[!isSelected(item)]]">< 
+                <template is="dom-if" if="[[!isSelected(item, index)]]">< 
                     <option value="[[item]]">[[item]]</option>
                 </template>
             </template>
