--- a/public/components/mrp-text-box/mrp-text-box.html
+++ b/public/components/mrp-text-box/mrp-text-box.html
@@ -1,3 +1,8 @@
+<!--
+V0.1
+This is basically the text with a regex based validation.
+-->
+
 <script src="../Libs/logger.js"></script>
 <script src="../Libs/JSLIB.js"></script>
 <script src="../Libs/Brokers.js"></script>
